# SmartAgentX

./: .env.example  .gitignore  README.md  env.example  main.py  pyproject.toml
backend/: .env.example  README.md
backend/src/agents/: assistant.py
backend/src/config/: settings.py
src/agents/: assistant.py
src/api/: main.py
src/config/: settings.py
src/templates/: index.html
src/tools/: calculator.py  dictionary.py  pdf_reader.py  search.py  weather.py
